monticore-generator/src/test/resources/cocos/valid/ScopeRule.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.valid;

grammar ScopeRule {

 symbol A = Name;

 scoperule =
    name:String*
    foo:int
    gen:List<String>
    opt:String?;

}
