monticore-generator/src/test/resources/cocos/invalid/A4008/A4008b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4008;

grammar A4008b extends mc.grammars.types.TestTypes {

  enum ArrayType = "a";

}
